tests/_resources/error_gcns/E102_unknown_distribution.gcn
# Unknown distribution name
block HOUSEHOLD {
    calibration {
        alpha ~ UnknownDist(a=1, b=2) = 0.5;
    };
};
